[package]
name = "replaymanager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
catbox = "0.8.2"
chrono = "0.4.44"
eframe = "0.33.3"
egui_alignments = "0.3.7"
egui_extras = { version = "0.33.3", features = ["file", "image"] }
env_logger = "0.11.9"
futures = "0.3.32"
glob = "0.3.3"
rayon = "1.11.0"
serde = "1.0.228"
tokio = "1.50.0"
walkdir = "2.5.0"
