[package]
name = "replay-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
catbox = "0.8.2"
dirs = "5.0"
eframe = { version = "0.33.3", features = ["persistence"] }
egui-file-dialog = "0.12.0"
egui-notify = "0.21.0"
egui_extras = { version = "0.33.3", features = ["file", "image"] }
egui_material_icons = "0.5.0"
env_logger = "0.11.9"
glob = "0.3.3"
open = "5.3.3"
rayon = "1.11.0"
serde = "1.0.228"
tokio = "1.50.0"
which = "8.0.0"
